fixing layout issues

--- a/src/features/curriculum/loader.css
+++ b/src/features/curriculum/loader.css
@@ -1,3 +1,7 @@
+.loader.show {
+  opacity: 1;
+  left: 0;
+}
 .loader {
   border: 16px solid #f3f3f3; /* Light grey */
   border-top: 16px solid #3498db; /* Blue */
@@ -5,6 +9,10 @@
   width: 120px;
   height: 120px;
   animation: spin 2s linear infinite;
+  transition: all linear 1s;
+  opacity: 0;
+  position: absolute;
+  left: -300px;
 }
 
 @keyframes spin {
